--- a/public/css/app.css
+++ b/public/css/app.css
@@ -255,3 +255,178 @@ button[type="submit"]:hover {
 .hamburger-menu.active .dropdown-menu {
     display: block;
 }
+
+.resolved {
+    border-color: gold;
+}
+.profile-header {
+    background-color: #2b3649;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile-name-box {
+    margin-bottom: 20px;
+}
+
+.profile-name-box h1 {
+    margin: 0;
+    font-size: 36px;
+    color: #fff;
+}
+
+.profile-name-box p {
+    margin: 0;
+    font-size: 16px;
+    color: #d5dce3;
+}
+
+.profile-stats {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+}
+
+.stat-item {
+    text-align: center;
+}
+
+.stat-number {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.stat-label {
+    font-size: 14px;
+    color: #d5dce3;
+}
+
+#flash-message {
+    margin-top: 20px;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+.profile-actions {
+    margin-bottom: 20px;
+}
+
+.tab-link {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    transition: background-color 0.3s, color 0.3s, border-bottom 0.3s;
+}
+
+.tab-link:hover,
+.tab-link.active {
+    background-color: limegreen;
+    color: #fff;
+    border-bottom: 2px solid #007bff;
+    border-radius: 5px;
+}
+
+.tab-link.active {
+    border-bottom: 2px solid #007bff;
+}
+.tabs {
+    margin-bottom: 20px;
+}
+.tab-content {
+    display: none;
+}
+.tab-content.active {
+    display: block;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding: 0.5rem;
+}
+
+.container {
+    margin-top: 20px;
+}
+
+.exercise-header {
+    background-color: #2b3649;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.exercise-content {
+    background-color: #2b3649;
+    border: 1px solid #2b3649;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2 {
+    margin-bottom: 10px;
+}
+
+.exercise-header p {
+    margin: 0;
+    font-size: 14px;
+    color: #d5dce3;
+}
+
+.latex-content {
+    background-color: #1a202c;
+    border: 1px solid #1a202c;
+    border-radius: 5px;
+    margin: 10px 0;
+    padding: 20px;
+}
+
+.favorite-container {
+    position: relative;
+    display: inline-block;
+}
+
+.favorite-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+}
+
+.favorite-icon {
+    font-size: 24px;
+    color: #ccc;
+    transition: transform 0.3s ease, color 0.3s ease;
+    display: inline-block;
+}
+
+.favorite-btn.favorited .favorite-icon {
+    color: #ffd700;
+    transform: rotate(360deg);
+}
+
+.favorite-icon::before {
+    content: '\2605';
+}
